{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 157,
  "lineage": "9aa27472-cb35-46c2-d27f-ab94e7b57526",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "myAlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:137068224274:loadbalancer/app/MyALB/062617abb3061c40",
            "arn_suffix": "app/MyALB/062617abb3061c40",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "MyALB-1638139604.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:137068224274:loadbalancer/app/MyALB/062617abb3061c40",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "MyALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0669956fdb82d2422"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01437ca7f6ec04f67"
              },
              {
                "subnet_id": "subnet-0d29768361563aba6"
              }
            ],
            "subnets": [
              "subnet-01437ca7f6ec04f67",
              "subnet-0d29768361563aba6"
            ],
            "tags_all": {
              "CreatedBy": "Terraform",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "vpc_id": "vpc-0feec9a869d940109",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:137068224274:listener/app/MyALB/062617abb3061c40/d222b7329badbf8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:137068224274:targetgroup/AppTG/4e2e60d9bf8471e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:137068224274:listener/app/MyALB/062617abb3061c40/d222b7329badbf8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:137068224274:loadbalancer/app/MyALB/062617abb3061c40",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CreatedBy": "Terraform",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_lb.myAlb",
            "module.ec2.aws_lb_target_group.app_tg",
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:137068224274:targetgroup/AppTG/4e2e60d9bf8471e4",
            "arn_suffix": "targetgroup/AppTG/4e2e60d9bf8471e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:137068224274:targetgroup/AppTG/4e2e60d9bf8471e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:137068224274:loadbalancer/app/MyALB/062617abb3061c40"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "AppTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "CreatedBy": "Terraform",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:security-group/sg-0669956fdb82d2422",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0669956fdb82d2422",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AlbSg",
            "name_prefix": "",
            "owner_id": "137068224274",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CreatedBy": "Terraform",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:security-group/sg-043cbd4ad5e2d4fe1",
            "description": "Security Group for Application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043cbd4ad5e2d4fe1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0669956fdb82d2422"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AppSg",
            "name_prefix": "",
            "owner_id": "137068224274",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "CreatedBy": "Terraform",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:internet-gateway/igw-0c770bfc77f819d11",
            "id": "igw-0c770bfc77f819d11",
            "owner_id": "137068224274",
            "tags": {
              "Name": "MainIGW"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "MainIGW",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:route-table/rtb-02e640a5926735f5d",
            "id": "rtb-02e640a5926735f5d",
            "owner_id": "137068224274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.248.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRT"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "PrivateRT",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:route-table/rtb-0d2eb8f0267a19464",
            "id": "rtb-0d2eb8f0267a19464",
            "owner_id": "137068224274",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c770bfc77f819d11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.248.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "PublicRT",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db50564159f09361",
            "route_table_id": "rtb-02e640a5926735f5d",
            "subnet_id": "subnet-0aa984fe257fac779"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051b4a73b8a001db8",
            "route_table_id": "rtb-02e640a5926735f5d",
            "subnet_id": "subnet-01ec83dfc6bbde4eb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1682232b2fbc6a2",
            "route_table_id": "rtb-0d2eb8f0267a19464",
            "subnet_id": "subnet-01437ca7f6ec04f67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c402cb10569f7f2a",
            "route_table_id": "rtb-0d2eb8f0267a19464",
            "subnet_id": "subnet-0d29768361563aba6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.subnets",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:subnet/subnet-0aa984fe257fac779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.254.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa984fe257fac779",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068224274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "private_subnet1",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:subnet/subnet-01ec83dfc6bbde4eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.255.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ec83dfc6bbde4eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068224274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "private_subnet2",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:subnet/subnet-01437ca7f6ec04f67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.252.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01437ca7f6ec04f67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068224274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "public_subnet1",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:subnet/subnet-0d29768361563aba6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.253.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d29768361563aba6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068224274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "public_subnet2",
              "Project": "AWS-Terraform-Scalable-App-1"
            },
            "vpc_id": "vpc-0feec9a869d940109"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137068224274:vpc/vpc-0feec9a869d940109",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.248.0/21",
            "default_network_acl_id": "acl-0dc7e1416d570b9b5",
            "default_route_table_id": "rtb-0eb24f3b515c3daa6",
            "default_security_group_id": "sg-03128fa1afe2db461",
            "dhcp_options_id": "dopt-03c264efe29338715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0feec9a869d940109",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb24f3b515c3daa6",
            "owner_id": "137068224274",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "MyVPC",
              "Project": "AWS-Terraform-Scalable-App-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}